Archive2/b8/426228d5248ffd/output
main.cpp:11:25: error: expected a qualified name after 'typename'
    template < typename T (*function)( const U& u1, const U& u2 ) >
                        ^
1 error generated.
